# pico_w_artika_sconce

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  abtypes.h  build.sh  buildAndRun.sh  clean.sh  lwipopts.h  main.c  main.c.ping  picowotaNotes.txt  pinout.h  readme.md  run.sh  setup.sh
heartbeat/: heartbeat.c  heartbeat.h
networking/: asMqtt.c  asMqtt.h
terminal/: terminal.c  terminal.h
ws2812/: WS2812.c  WS2812.h
ws281X/: WS281X.c  WS281X.h
